--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,3 +28,7 @@ en:
           attributes:
             vin:
               invalid: "The VIN you entered does not appear to be correct. Please try again."
+    models:
+      vehicle:
+        one: Vehicle
+        other: Vehicles
